--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-VITE_GOOGLE_API_KEY="VITE_GOOGLE_API_KEY"
-VITE_GOOGLE_MAP_ID="VITE_GOOGLE_MAP_ID"
-VITE_EMAILJS_SERVICE_ID="VITE_EMAILJS_SERVICE_ID"
-VITE_EMAILJS_TEMPLATE_ID="VITE_EMAILJS_TEMPLATE_ID"
-VITE_EMAILJS_PUBLIC_KEY="VITE_EMAILJS_PUBLIC_KEY"
+# EmailJS Configuration (Required for contact form)
+VITE_EMAILJS_SERVICE_ID=your_emailjs_service_id
+VITE_EMAILJS_TEMPLATE_ID=your_emailjs_template_id
+VITE_EMAILJS_PUBLIC_KEY=your_emailjs_public_key
+
+# Google Maps API (Optional - only if you want to switch back to Google Maps)
+# VITE_GOOGLE_API_KEY=your_google_maps_api_key
+# VITE_GOOGLE_MAP_ID=your_google_map_id
