--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
+        "dev:host": "vite --host",
         "build": "vite build",
         "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
     },
     "dependencies": {
         "@emailjs/browser": "^4.3.3",
-        "@vis.gl/react-google-maps": "^1.0.0",
         "i18next": "^23.11.4",
+        "leaflet": "^1.9.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-i18next": "^14.1.1",
         "react-icons": "^5.2.1",
         "react-intl": "^6.6.7",
+        "react-leaflet": "^4.2.1",
         "react-router-dom": "^6.23.1"
     },
     "devDependencies": {
