Add IONOS email backend API, remove EmailJS

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,6 @@
-# EmailJS Configuration (Required for contact form)
-VITE_EMAILJS_SERVICE_ID=your_emailjs_service_id
-VITE_EMAILJS_TEMPLATE_ID=your_emailjs_template_id
-VITE_EMAILJS_PUBLIC_KEY=your_emailjs_public_key
-
-# Google Maps API (Optional - only if you want to switch back to Google Maps)
-# VITE_GOOGLE_API_KEY=your_google_maps_api_key
-# VITE_GOOGLE_MAP_ID=your_google_map_id
+# IONOS SMTP Configuration for Contact Form
+SMTP_HOST=smtp.ionos.com
+SMTP_PORT=587
+SMTP_USER=your_ionos_email@example.com
+SMTP_PASS=your_ionos_password
+RECIPIENT_EMAIL=where_to_receive_messages@example.com
