--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@emailjs/browser": "^4.3.3",
         "i18next": "^23.11.4",
         "leaflet": "^1.9.4",
+        "nodemailer": "^8.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-i18next": "^14.1.1",
