Fix vercel.json - exclude assets from SPA rewrite

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-    "rewrites": [
-        {
-            "source": "/:path*",
-            "destination": "/"
-        }
-    ]
+  "rewrites": [
+    {
+      "source": "/((?!assets|icons|.*\\.js|.*\\.css|.*\\.png|.*\\.jpg|.*\\.jpeg|.*\\.svg|.*\\.ico|.*\\.json|.*\\.txt|.*\\.xml).+)",
+      "destination": "/"
+    }
+  ]
 }
