Fix email API to use Gmail SMTP service

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-# IONOS SMTP Configuration for Contact Form
-SMTP_HOST=smtp.ionos.com
-SMTP_PORT=587
-SMTP_USER=your_ionos_email@example.com
-SMTP_PASS=your_ionos_password
-RECIPIENT_EMAIL=where_to_receive_messages@example.com
+# Gmail SMTP Configuration for Contact Form
+# Note: You need to use an App Password, not your regular Gmail password
+# Get it from: Google Account > Security > 2-Step Verification > App passwords
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+RECIPIENT_EMAIL=your-email@gmail.com
