Update env files to use enamino@gmail.com as default

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Gmail SMTP Configuration for Contact Form
 # Note: You need to use an App Password, not your regular Gmail password
 # Get it from: Google Account > Security > 2-Step Verification > App passwords
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
-RECIPIENT_EMAIL=your-email@gmail.com
+SMTP_USER=enamino@gmail.com
+SMTP_PASS=your-app-password-here
+RECIPIENT_EMAIL=enamino@gmail.com
