--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,11 @@
 {
+  "routes": [
+    {
+      "src": "/[^.]+",
+      "dest": "/",
+      "status": 200
+    }
+  ],
   "headers": [
     {
       "source": "/assets/(.*)",
