Fix vercel.json: use modern rewrites syntax for SPA routing

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
-  "routes": [
+  "rewrites": [
     {
-      "src": "/[^.]+",
-      "dest": "/",
-      "status": 200
+      "source": "/((?!api|assets|icons|manifest\\.json|sw\\.js).*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
